--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = "^0.103.1"
 uvicorn = "^0.23.2"
 psycopg2 = "^2.9.7"
 sqlalchemy-utils = "^0.41.1"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 
 
 [build-system]
