feat: add pdf file upload and downloading

--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -7,13 +7,14 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-ariadne = "^0.20.1"
+ariadne = {extras = ["file-uploads"], version = "^0.20.1"}
 sqlalchemy = "^2.0.21"
 fastapi = "^0.103.1"
 uvicorn = "^0.23.2"
-psycopg2 = "^2.9.7"
 sqlalchemy-utils = "^0.41.1"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+psycopg2-binary = "^2.9.9"
+python-multipart = "^0.0.6"
 
 
 [build-system]
