--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.8.4",
     "@reduxjs/toolkit": "^1.9.6",
     "antd": "^5.9.4",
+    "apollo-upload-client": "^17.0.0",
     "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
