--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.16.0",
-    "socket.io-client": "^4.7.2"
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.0",
