--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -15,6 +15,7 @@ sqlalchemy-utils = "^0.41.1"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 psycopg2-binary = "^2.9.9"
 python-multipart = "^0.0.6"
+websockets = "^12.0"
 
 
 [build-system]
